[package]
name = "rustfinder"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde_json = "1.0.99"
serde = { version = "1.0.164", features = ["derive"] }